data/gnupg-users/marco_maggiipsu_poste_it.txt

@_date: 2010-01-15 21:08:00
@_author: Marco Maggi 
@_subject: [admin] web pages not updated 
I generate some noise here in the hope to reach the admins
of   despite the recent releases  of gpgme and
libassuan, the page at:
still proposes  links to  gpgme version 1.1.8  and libassuan
version 1.0.5.

@_date: 2018-06-11 08:31:58
@_author: Marco Maggi 
@_subject: [Announce] [security fix] GnuPG 2.2.8 released (CVE-2018-12020) 
running    "make"   fails    with    undeclared    symbol.    On    my
x86_64-pc-linux-gnu (Slackware) I downloaded:
         configured with:
   configure --prefix=/usr/local --libdir=/usr/local/lib64 CFLAGS=-O3
I get this report:
        GnuPG v2.2.8 has been configured as follows:
        Revision:  cd9aaa786  (52634)
        Platform:  GNU/Linux (x86_64-pc-linux-gnu)
        OpenPGP:   yes
        S/MIME:    yes
        Agent:     yes
        Smartcard: yes         G13:       no
        Dirmngr:   yes
        Gpgtar:    yes
        WKS tools: no
        Protect tool:      (default)
        LDAP wrapper:      (default)
        Default agent:     (default)
        Default pinentry:  (default)
        Default scdaemon:  (default)
        Default dirmngr:   (default)
        Dirmngr auto start:  yes
        Readline support:    yes
        LDAP support:        yes
        TLS support:         gnutls
        TOFU support:        yes
        Tor support:         yes
when running make I get:
gcc -DHAVE_CONFIG_H -I. -I..  -DLOCALEDIR=\"/usr/local/share/locale\" -DGNUPG_BINDIR="\"/usr/local/bin\"" -DGNUPG_LIBEXECDIR="\"/usr/local/libexec\"" -DGNUPG_LIBDIR="\"/usr/local/lib64/gnupg\"" -DGNUPG_DATADIR="\"/usr/local/share/gnupg\"" -DGNUPG_SYSCONFDIR="\"/usr/local/etc/gnupg\"" -DGNUPG_LOCALSTATEDIR="\"/usr/local/var\""        -I/usr/local/include -I/usr/local/include -I/usr/local/include -I/usr/local/include -Wall -Wno-pointer-sign -Wpointer-arith -O3 -MT mainproc.o -MD -MP -MF .deps/mainproc.Tpo -c -o mainproc.o mainproc.c
mainproc.c: In function 'proc_encrypted':
mainproc.c:686:14: error: 'GPGRT_LOGLVL_INFO' undeclared (first use in this function); did you mean 'GPGRT_LOG_INFO'?
             (GPGRT_LOGLVL_INFO,
              ^~~~~~~~~~~~~~~~~
              GPGRT_LOG_INFO
mainproc.c:686:14: note: each undeclared identifier is reported only once for each function it appears in
Makefile:875: recipe for target 'mainproc.o' failed
   $ grep GPGRT_LOGLVL_INFO * --recursive
   g10/mainproc.c:            (GPGRT_LOGLVL_INFO,
  I cannot believe that I am the only one getting this error.

@_date: 2018-06-11 10:06:25
@_author: Marco Maggi 
@_subject: [Announce] [security fix] GnuPG 2.2.8 released (CVE-2018-12020) 
I fixed  this by upgrading to  the latest libgpg-error.  This  means the
gnupg  package  does  not  detect  the  installed  libgpg-error  version
